<resources>
    <string name="app_name">My_GAME</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="help">HELP</string>
    <string name="backFromHelp">BACK</string>
    <string name="rules">Rules:</string>
    <string name="step_1_click_quot_new_game_quot_you_and_the_dealer_will_be_dealt_2_cards_with_1_of_the_dealers_cards_being_hidden_along_with_their_score">Step 1 - Click \"New Game.\" You and the dealer will be dealt 2 cards with 1 of the dealers\' cards being hidden along with their score</string>
    <string name="step_2_if_you_score_21_blackjack_or_you_would_like_to_stand_after_the_new_game_draw_click_stand">Step 2 - If you score 21 (Blackjack!) or you would like to stand after the new game draw, click Stand!</string>
    <string name="step_3_if_you_would_like_to_draw_another_card_after_the_new_game_draw_click_hit_repeat_until_you_no_longer_wish_to_draw">Step 3 - If you would like to draw another card after the new game draw, click Hit!Repeat until you no longer wish to draw.</string>
    <string name="numbered_cards_are_worth_their_face_value_while_jacks_queens_and_kings_are_worth_10_aces_are_worth_11_until_the_holder_s_score_is_above_11_then_it_will_be_worth_1">* Numbered cards are worth their face value while Jacks, Queens, and Kings are worth 10. Aces are worth 11 until the holder\'s score is above 11. Then, it will be worth 1.</string>
    <string name="dealer_must_stand_on_17_and_must_draw_to_16">* Dealer must stand on 17 and must draw to 16.</string>
    <string name="the_game_is_played_with_5_decks_of_cards_so_multiples_can_be_drawn">* The game is played with 5 decks of cards, so multiples can be drawn.</string>
    <string name="step_4_once_you_are_done_drawing_or_hitting_click_the_quot_stand_quot_button_to_get_game_results_click_the_new_game_button_again_if_you_d_like_to_play_again">Step 4 - Once you are done drawing (or Hitting), click the \"Stand!\" button to get game results. Click the new game button again if you\'d like to play again.</string>
    <string name="click_the_settings_tab_on_the_homepage_to_switch_background_color">* Click the Settings tab on the Homepage to switch Background color.</string>
    <string name="thanks_for_playing">THANKS FOR PLAYING</string>
    <string name="are_you_sure_you_want_to_quit">ARE YOU SURE YOU WANT TO QUIT?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="dealer_0">Dealer: 0</string>
    <string name="player_0">Player: 0</string>
    <string name="stand">STAND!</string>
    <string name="hit">HIT!</string>
    <string name="quit">QUIT</string>
    <string name="new_game">New Game</string>
    <string name="card1">card</string>
    <string name="card2">card</string>
    <string name="card3">card</string>
    <string name="cards">cards</string>
    <string name="card">card</string>
    <string name="settings">SETTINGS</string>
    <string name="backFromSettings">BACK</string>
    <string name="choose_night_or_dark_mode">Choose Night or Dark Mode</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="player_stats">Player Stats</string>
    <string name="back">BACK</string>
    <string name="play">PLAY</string>
    <string name="settingstxt">SETTINGS</string>
    <string name="player_statsbtn">PLAYER STATS</string>
    <string name="helptxt">HELP</string>
    <string name="exit">EXIT</string>
    <string name="blackjack">BLACKJACK!</string>
    <string name="fanned_cards">fanned cards</string>
</resources>