<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context=".HelpActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="173dp"
        android:layout_height="58dp"
        android:text="@string/help"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#FAF8F7"
        android:textColorHighlight="#000000"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="165dp"
        android:layout_height="64dp"
        android:backgroundTint="#00897B"
        android:text="@string/back"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="104dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:text="@string/rules"
        android:textColor="#090909"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/step_1_click_quot_new_game_quot_you_and_the_dealer_will_be_dealt_2_cards_with_1_of_the_dealers_cards_being_hidden_along_with_their_score"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="3dp"
        android:text="@string/step_2_if_you_score_21_blackjack_or_you_would_like_to_stand_after_the_new_game_draw_click_stand"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="3dp"
        android:text="@string/step_3_if_you_would_like_to_draw_another_card_after_the_new_game_draw_click_hit_repeat_until_you_no_longer_wish_to_draw"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="3dp"
        android:text="@string/numbered_cards_are_worth_their_face_value_while_jacks_queens_and_kings_are_worth_10_aces_are_worth_11_until_the_holder_s_score_is_above_11_then_it_will_be_worth_1"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="3dp"
        android:text="@string/dealer_must_stand_on_17_and_must_draw_to_16"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="3dp"
        android:text="@string/the_game_is_played_with_5_decks_of_cards_so_multiples_can_be_drawn"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="3dp"
        android:text="@string/step_4_once_you_are_done_drawing_or_hitting_click_the_quot_stand_quot_button_to_get_game_results_click_the_new_game_button_again_if_you_d_like_to_play_again"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="3dp"
        android:text="@string/click_the_settings_tab_on_the_homepage_to_switch_background_color"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>