<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <LinearLayout
        android:id="@+id/lay_cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/playerCard1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:contentDescription="@string/card"
            android:scaleType="centerInside"
            android:src="@drawable/back_of_card" />

        <ImageView
            android:id="@+id/playerCard2"
            android:layout_width="wrap_content"
            android:layout_height="207dp"
            android:layout_weight="2"
            android:contentDescription="@string/card"
            android:scaleType="centerInside"
            android:src="@drawable/back_of_card" />
    </LinearLayout>

    <TextView
        android:id="@+id/player_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="311dp"
        android:text="@string/player_0"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lay_cards" />

    <LinearLayout
        android:id="@+id/lay_dealer_cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/dealerCard1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/card"
            android:scaleType="centerInside"
            android:src="@drawable/back_of_card" />

        <ImageView
            android:id="@+id/dealerCard2"
            android:layout_width="wrap_content"
            android:layout_height="207dp"
            android:layout_weight="1"
            android:contentDescription="@string/card"
            android:scaleType="centerInside"
            android:src="@drawable/back_of_card" />
    </LinearLayout>

    <TextView
        android:id="@+id/dealer_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:text="@string/dealer_0"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/lay_dealer_cards"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lay_cards"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="94dp"
        android:layout_height="232dp"
        android:contentDescription="@string/cards"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        app:srcCompat="@drawable/back_of_card" />

    <Button
        android:id="@+id/hitMeBtn"
        android:layout_width="111dp"
        android:layout_height="56dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#00897B"
        android:text="@string/hit"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/newGameBtn"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/noDrawBtn"
        android:layout_width="111dp"
        android:layout_height="56dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#00897B"
        android:text="@string/stand"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/hitMeBtn"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/quitGameBtn"
        android:layout_width="111dp"
        android:layout_height="56dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#00897B"
        android:text="@string/quit"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/noDrawBtn"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/newGameBtn"
        android:layout_width="111dp"
        android:layout_height="56dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="232dp"
        android:backgroundTint="#00897B"
        android:text="@string/new_game"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>